kafka-Initial/cptestclient.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-client
  namespace: garagetest
spec:
  containers:
  - name: kafka-client
    image: reg-dhc-americas.app.corpintra.net/myanama/kafka:2.1.0
    command:
      - sh
      - -c
      - "exec tail -f /dev/null"
  securityContext:
    fsGroup: 1000
    runAsUser: 1000
