kafka-Initial/10-zookeeper.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: zookeeper-network-policy
  spec:
    podSelector:
      matchLabels:
        app: zookeeper
    ingress:
    - {}
- apiVersion: policy/v1beta1
  kind: PodDisruptionBudget
  metadata:
    name: zookeeper
    labels:
      app: zookeeper
  spec:
    selector:
      matchLabels:
        app: zookeeper
    maxUnavailable: 1
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: zookeeper
    name: zookeeper
  spec:
    ports:
    - name: client
      port: 2181
      protocol: TCP
      targetPort: client
    selector:
      app: zookeeper
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: zookeeper
    name: zookeeper-headless
  spec:
    clusterIP: None
    ports:
    - name: client
      port: 2181
      protocol: TCP
      targetPort: client
    - name: election
      port: 3888
      protocol: TCP
      targetPort: election
    - name: server
      port: 2888
      protocol: TCP
      targetPort: server
    selector:
      app: zookeeper
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    labels:
      app: zookeeper
    name: zookeeper
  spec:
    podManagementPolicy: OrderedReady
    replicas: 3
    selector:
      matchLabels:
        app: zookeeper
    serviceName: zookeeper-headless
    template:
      metadata:
        labels:
          app: zookeeper
      spec:
        containers:
        - command:
          - /bin/bash
          - -xec
          - zkGenConfig.sh && exec zkServer.sh start-foreground
          image: reg-dhc-americas.app.corpintra.net/myanama/zookeeper:3.4.10
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - zkOk.sh
            initialDelaySeconds: 20
          name: zookeeper
          ports:
          - containerPort: 2181
            name: client
            protocol: TCP
          - containerPort: 3888
            name: election
            protocol: TCP
          - containerPort: 2888
            name: server
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - zkOk.sh
            initialDelaySeconds: 20
          resources: {}
          volumeMounts:
          - mountPath: /var/lib/zookeeper
            name: data
        dnsPolicy: ClusterFirst
        securityContext:
          fsGroup: 1000
          runAsUser: 1000
        terminationGracePeriodSeconds: 1800
    updateStrategy:
      type: OnDelete
    volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
