kafka-Initial/20-kafka.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: kafka-network-policy
  spec:
    podSelector:
      matchLabels:
        app: kafka
    ingress:
    - {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: kafka
    name: kafka
  spec:
    ports:
    - name: broker
      port: 9092
      protocol: TCP
      targetPort: kafka
    - name: broker-ext
      port: 80
      protocol: TCP
      targetPort: kafka-ext
    selector:
      app: kafka
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
    labels:
      app: kafka
    name: kafka-headless
  spec:
    clusterIP: None
    ports:
    - name: broker
      port: 9092
      protocol: TCP
      targetPort: 9092
    - name: broker-ext
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: kafka
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    labels:
      app: kafka
    name: kafka
  spec:
    podManagementPolicy: OrderedReady
    replicas: 3
    selector:
      matchLabels:
        app: kafka
    serviceName: kafka-headless
    template:
      metadata:
        labels:
          app: kafka
      spec:
        containers:
        - command:
          - sh
          - -exc
          - |
            unset KAFKA_PORT && \
            export KAFKA_BROKER_ID=${POD_NAME##*-} && \
            export KAFKA_ZOOKEEPER_CONNECT=zookeeper-headless:2181 && \
            export KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${POD_NAME}.kafka-headless:80 && \
            exec /etc/confluent/docker/run
          image: reg-dhc-americas.app.corpintra.net/myanama/kafka:2.0.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - sh
              - -ec
              - /usr/bin/jps | /bin/grep -q SupportedKafka
            initialDelaySeconds: 30
            timeoutSeconds: 5
          name: kafka-broker
          ports:
          - containerPort: 9092
            name: kafka
            protocol: TCP
          - containerPort: 80
            name: kafka-ext
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: kafka-ext
            timeoutSeconds: 5
          resources: {}
          volumeMounts:
          - mountPath: /opt/kafka/data
            name: datadir
        dnsPolicy: ClusterFirst
        securityContext:
          fsGroup: 1000
          runAsUser: 1000
        terminationGracePeriodSeconds: 60
        volumes:
        - emptyDir: {}
          name: datadir
    updateStrategy:
      type: OnDelete
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: kafka-ingress
    annotations:
      traefik.frontend.rule.type: PathPrefix
      ingress.kubernetes.io/content-type-nosniff: "true"
      nginx.ingress.kubernetes.io/affinity: cookie
  spec:
    rules:
    - host: ng-garage-nafta-qa.app.corpintra.net
      http:
        paths:
        - path: /
          backend:
            serviceName: kafka
            servicePort: 80
